name:         hpc
version:      0.6.0.1
-- GHC 7.6.1 released with 0.6.0.0
license:      BSD3
license-file: LICENSE
author:       Andy Gill
maintainer:   libraries@haskell.org
bug-reports: http://hackage.haskell.org/trac/ghc/newticket?component=Code%20Coverage
category:     Control
synopsis:     Code Coverage Library for Haskell
build-type:   Simple
Cabal-Version: >= 1.6

source-repository head
    type:     git
    location: http://darcs.haskell.org/packages/hpc.git/

Library
    exposed-modules:
        Trace.Hpc.Util
        Trace.Hpc.Mix
        Trace.Hpc.Tix
        Trace.Hpc.Reflect
    extensions: CPP
    Build-Depends: base       >= 4.5 && < 5,
                   directory  >= 1   && < 1.3,
                   time                 < 1.5,
                   containers >= 0.1 && < 0.6
    ghc-options: -Wall

